# layoutflow-xai

./: .gitignore  DATASET_README.md  README.md  pyproject.toml  requirements.txt  statistical_analysis.ipynb
conf/: test.yaml  train.yaml
conf/dataset/: PubLayNet.yaml  RICO.yaml
src/: test.py  train.py
src/models/: LayoutDMx.py  LayoutFlow.py
src/utils/: distribution_sampler.py  explainability.py  fid_model.py  visualization.py
