[project]
name = "layoutflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.1.1",
    "dateutils>=0.6.12",
    "deepdiff>=8.6.1",
    "diffusers>=0.35.1",
    "dreamsim>=0.2.1",
    "einops>=0.8.1",
    "fastapi>=0.117.1",
    "h5pickle>=0.4.2",
    "h5py>=3.14.0",
    "huggingface-hub>=0.35.1",
    "hydra-core>=1.3.2",
    "lightning>=2.5.5",
    "matplotlib>=3.9.4",
    "multiprocess>=0.70.16",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "pytorch-fid>=0.3.0",
    "pytorch-lightning>=2.5.5",
    "rootutils>=1.0.7",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "sentry-sdk>=2.39.0",
    "skia-python>=138.0",
    "tables>=3.9.2",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "timm>=1.0.20",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "torchcde>=0.2.5",
    "torchcfm>=1.0.7",
    "torchdata>=0.11.0",
    "torchdiffeq>=0.2.5",
    "torchdyn>=1.0.6",
    "torchmetrics>=1.8.2",
    "torchsde>=0.2.6",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "trampoline>=0.1.2",
    "transformers>=4.56.2",
    "wandb>=0.22.0",
    "werkzeug>=3.1.3",
]
